# clipboard-push-android

./: .gitignore  2026-02-05_13-33-31.txt  CLAUDE.md  LAN_SIGNAL_PROTOCOL.md  LAN_SYNC_DEV_PLAN.md  LICENSE  PRD.md  PROJECT_DOCUMENTATION.md  README.md  build.gradle.kts  crash2.txt  crash_device.txt  crash_log.txt  debug_client.py  generate_icons.py  pid_crash.txt  pid_crash_utf8.txt  settings.gradle.kts  start_web_client.bat  version.properties
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/clipboardpush/plus/: ClipboardManApp.kt  MainActivity.kt  QuickPushActivity.kt
app/src/main/java/com/clipboardpush/plus/service/: ClipboardHelper.kt  ClipboardService.kt  FcmService.kt  LocalFileServer.kt
app/src/main/java/com/clipboardpush/plus/share/: ShareReceiverActivity.kt
app/src/main/java/com/clipboardpush/plus/util/: CryptoManager.kt  FileUtil.kt  FormatUtil.kt  NetworkUtil.kt  NotificationHelper.kt
app/src/main/java/com/clipboardpush/plus/worker/: DownloadWorker.kt  UploadWorker.kt
app/src/main/java/com/example/clipboardman/: ClipboardManApp.kt  MainActivity.kt  QuickPushActivity.kt
app/src/main/java/com/example/clipboardman/service/: ClipboardHelper.kt  ClipboardService.kt  FcmService.kt  LocalFileServer.kt
app/src/main/java/com/example/clipboardman/share/: ShareReceiverActivity.kt
app/src/main/java/com/example/clipboardman/util/: CryptoManager.kt  DebugLogger.kt  FileUtil.kt  FormatUtil.kt  NetworkUtil.kt  NotificationHelper.kt
app/src/main/java/com/example/clipboardman/worker/: DownloadWorker.kt  UploadWorker.kt
app/src/main/res/drawable/: btn_push_background.xml  ic_github.xml  ic_launcher_foreground.xml  ic_send.xml  ic_stat_clipboard.xml
app/src/main/res/layout/: notification_service.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/clipboardpush/plus/util/: CryptoManagerTest.kt  FormatUtilTest.kt
app/src/test/java/com/example/clipboardman/util/: CryptoManagerTest.kt  FormatUtilTest.kt
client/: GEMINI.md  README.md  app.js  clipboard_man_client.py  clipboard_push_client.py  config.json  fix_vcpkg.ps1  fix_vcpkg_v2.ps1  fix_vcpkg_v3.ps1  fix_vcpkg_v4.ps1  fix_vcpkg_v5.ps1  index.html  push_to_clipboard_man_server.py  push_to_clipboard_push_server.py  push_to_server.bat  requirements.txt  start.bat  start_client.bat  style.css  test_crypto_logic.py  vocechat_listener.py
client/clipboard-push/: CMakeLists.txt  vcpkg.json
client/clipboard-push/src/: Clipboard.cpp  Clipboard.hpp  Config.hpp  Gui.cpp  Gui.hpp  Network.cpp  Network.hpp  main.cpp  resources.rc
client2/: clipboard_push_client.py  config.json  main_pyqt.py  requirements.txt  start_client.bat  ui_manager.py  worker_threads.py
client2/clipboard-push/: CMakeLists.txt  vcpkg.json
client2/clipboard-push/src/: Clipboard.cpp  Clipboard.hpp  Config.hpp  Network.hpp
cpp_client/: CMakeLists.txt  build_log.txt  findings.md  implementation_plan.md  progress.md  task_plan.md  vcpkg.json  walkthrough.md
cpp_client/cmake/modules/: Findasio.cmake  Findrapidjson.cmake  Findwebsocketpp.cmake
cpp_client/include/: Base64.hpp  ClipboardManager.hpp  Common.hpp  ConfigManager.hpp  CryptoManager.hpp  HotkeyManager.hpp  MainWindow.hpp  NetworkClient.hpp  TrayIcon.hpp  Window.hpp  resource.h
cpp_client/src/: Base64.cpp  ClipboardManager.cpp  ConfigManager.cpp  CryptoManager.cpp  GuiManager.cpp  GuiManager.hpp  HotkeyManager.cpp  MainWindow.cpp  NetworkClient.cpp  TrayIcon.cpp  Window.cpp  app.manifest  client.rc  main.cpp
prototypes/: blueprint.html  native_settings.html
pyside6-client/: CLAUDE.md  CPP_BUILD_SUMMARY.md  GEMINI.md  LAN_SYNC_DEV_PLAN.md  RELAY_SERVER_API.md  ROOM_LAN_STATE_API.md  WIN32_PORT_SUMMARY_AND_MACOS_GUIDE.md  config.json  crypto_utils.py  main_pyside.py  spec_for_cpp_rewrite.md  ui_manager.py  worker_threads.py
pyside6-client/cpp-client/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
pyside6-client/cpp-client/resources/: resources.qrc
pyside6-client/cpp-client/src/: Application.cpp  Application.h  main.cpp
pyside6-client/cpp-client/src/core/: Config.cpp  Config.h  CryptoManager.cpp  CryptoManager.h  Logger.h
pyside6-client/cpp-client/src/network/: HttpClient.cpp  HttpClient.h  SocketIOClient.cpp  SocketIOClient.h
pyside6-client/cpp-client/src/platform/: ClipboardManager.cpp  ClipboardManager.h  HotkeyManager.cpp  HotkeyManager.h
pyside6-client/cpp-client/src/ui/: MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h
pyside6-client/cpp-client/src/ui/widgets/: HotkeyRecorderEdit.cpp  HotkeyRecorderEdit.h  QRCodeWidget.cpp  QRCodeWidget.h
pyside6-client/dist-v3-win32/: config.json
pyside6-client/win32-client/: AI_BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  PROJECT_STRUCTURE.md  findings.md  progress.md  task_plan.md  vcpkg.json
pyside6-client/win32-client/src/: ClipboardPush.rc  ClipboardPushWin32.manifest  main.cpp
pyside6-client/win32-client/src/core/: Config.cpp  Config.h  Crypto.cpp  Crypto.h  LocalServer.cpp  LocalServer.h  Logger.cpp  Logger.h  Network.cpp  Network.h  SocketIOService.cpp  SocketIOService.h  SyncLogic.h  Utils.h
pyside6-client/win32-client/src/platform/: Clipboard.cpp  Clipboard.h  ClipboardMonitor.cpp  ClipboardMonitor.h  Hotkey.cpp  Hotkey.h  Platform.cpp  Platform.h
pyside6-client/win32-client/src/ui/: MainWindow.cpp  MainWindow.h  NotificationWindow.cpp  NotificationWindow.h  Resource.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h
server/: .env.example  AGENTS.md  DEPLOYMENT.md  DEPLOY_DEBIAN.md  GEMINI.md  PERFORMANCE_OPTIMIZATION.md  README.md  app.py  debug_r2.py  nginx_example.conf  relay_server.py  requirements.txt  start.bat
server/static/css/: style.css
server/static/js/: app.js
server/templates/: base.html  dashboard.html  login.html
website/: index.html
(+31 files in other folders)
